# graph-theory-c

./: .gitignore  CMakeLists.txt
include/: graph.h
include/core/: edge.h  graph.h  vertice.h
src/core/: edge.c  graph.c  vertice.c
test/: edge_test.c
